support for env vars and .env files
